--- a/.env
+++ b/.env
@@ -6,3 +6,6 @@
 
 DATABASE_URL="postgresql://postgres:123@localhost:5434/nest?schema=public"
 JWT_SECRET='super-secret'
+
+MAIL_USER=vaspupkin976@gmail.com
+MAIL_PASS=bajbpdhdbfjvrddh
